# BING-Objectness

./: CMakeLists.txt
LibLinear/: CMakeLists.txt
Objectness/: CMakeLists.txt  Objectness.cpp  stdafx.h
